change the index.html, I'd tried to fix the width size. However I couldn't.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Hazhir has made this file.</title>
 	</head>
-	<body style="width: 100%; height: 100vh;">
+	<body style="width: 100%; height: 100vh; box-sizing: border-box; padding: 0; margin: 0;">
 		<div style="display: flex; flex-direction: row;">
 			<div style="width: 25%; height: 100px; border: 1px solid #000; order: 1;">
 			<div style="width: 50%; height: 100px; border: 1px solid #555; order: 2;">
