--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 			<div style="width: 50%; height: 100px; border: 1px solid #555; order: 2;">
 			<div style="width: 25%; height: 100px; border: 1px solid #555; order: 1;">
 		</div>
+		<!-- i tried to make some comments on this file -->
 	</body>
 </html>
