third comment added.

--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 </html>
 
 <!-- second comment -->
+
+<!-- we try to add the third comment here and push it by the index.html-branch. Next merge it by the master branch. Let's see. -->
